tests/NormalTests/paczka1/fuzzy1/60594401.err
Error in line 6: DytQMn1Ip A64 42,9
Error in line 1: S178 A306 81,9
Error in line 16: DytQMn1Ip A64 89,0
Error in line 21: snzuHm A64 37,5
Error in line 22: DytQMn1Ip S178 98,2
Error in line 28: DytQMn1Ip A306 93,3
Error in line 26: USBrlNQEQ3 A306 47,8
Error in line 30: snzuHm A64 51,9
Error in line 37: snzuHm S178 93,8
Error in line 34: USBrlNQEQ3 S178 26,1
